pkcs11-helper
Copyright (c) 2005-2021 Alon Bar-Lev <alon.barlev@gmail.com>

????-??-?? - Version 1.29

* build: do not fail if slot evnets are disabled, thanks to Fabrice Fontaine.

2021-12-31 - Version 1.28

 * build: openssl: remove RSA_SSLV23_PADDING constant usage due to openssl-3
   compatibility, thanks to t0b3.
 * build: nss: use nss pkcs11.h, thanks to Fabrice Fontaine.
 * build: windows: checksum in PE, thanks to Simon Rozman.
 * build: windows: support openssl-1.1.1, thanks to Lev Stipakov.
 * mbed: require >=mbedtls-2, mbed dropped polarssl compatibility,
   thanks to Uipko Berghuis
 * certificate: add methods accept full mechanism, thanks to Selva Nair.
 * core: load provider library as private.
 * core: add pkcs11h_getProperty, pkcs11h_setProperty to support adding
   properties without breaking API.
 * core: add pkcs11h_initializeProvider, pkcs11h_registerProvider,
   pkcs11h_setProviderProperty, pkcs11h_setProviderPropertyByName to
   support adding properties without breaking API thanks to Михалицын Петр.
 * core: add initialization arguments property, thanks for Михалицын Петр.
 * core: add PKCS11H_PROVIDER_PROPERTY_PROVIDER_DESTRUCT_HOOK.
 * session: respect login required token flag.
 * certificate: respect always authenticate flag.

2020-11-17 - Version 1.27

 * core: handle PIN expiration after C_Login as C_Login may take a while
 * core: return explicit success when plugin&play and no threading and no
   safefork, thanks to Tunnelblick

2020-01-21 - Version 1.26

 * openssl: build with openssl ec disabled
 * openssl: support RSA_NO_PADDING padding, thanks to Selva Nair
 * core: reduce mutex lock scope of add/remove provider, thanks to Frank Morgner
 * core: improve the fork fixup sequence

2018-08-16 - Version 1.25.1

 * core: build with threading disabled

2018-08-04 - Version 1.25

 * core: do not attempt to initialize provider with fork mode is not safe. Too
   many providers do not follow the PKCS#11 spec.

2018-06-15 - Version 1.24
