@@ -4,6 +4,7 @@ Copyright (c) 2005-2021 Alon Bar-Lev <alon.barlev@gmail.com>
 ????-??-?? - Version 1.29
 
 * build: do not fail if slot evnets are disabled, thanks to Fabrice Fontaine.
+* core: do not assume standard objects supported by provider.
 
 2021-12-31 - Version 1.28
 
